fix html validator warnings

--- a/01_Lazaro_Vega_Task/index.html
+++ b/01_Lazaro_Vega_Task/index.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <aside>
-        <img src="./assets/Logo-Mighty-ducks-01.png" width=30 />
+        <img src="./assets/Logo-Mighty-ducks-01.png" alt="logo" width=30 />
       </aside>
       <div>
         <h1>Mighty Ducks Hockey League</h1>
@@ -30,7 +30,7 @@
         </figure>
       </aside>
       <section>
-        <article>
+        <div>
           <h2>Upcoming Event</h2>
           <div>
             <h3>August 4 </h3>
@@ -43,7 +43,7 @@
             <span>First Game of the Season (Check Game Schedule for details)</span>
             <br>
           </div>
-        </article>
+        </div>
       </section>
     </main>
   </body>
