--- a/01_Lazaro_Vega_Task/about.html
+++ b/01_Lazaro_Vega_Task/about.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <aside>
-        <img src="./assets/Logo-Mighty-ducks-01.png" width=30 />
+        <img src="./assets/Logo-Mighty-ducks-01.png" width=30 alt="logo" />
       </aside>
       <div>
         <h1>Mighty Ducks Hockey League</h1>
@@ -22,7 +22,7 @@
         </nav>
       </div>
     </header>
-    <section>
+    <div>
       <aside>
         <figure>
           <img src="./assets/hockey2.jpg" alt="News" width=100 />
@@ -48,7 +48,7 @@
           <br>
         </div>
       </article>
-    </section>
+    </div>
   </body>
 
 </html>
