--- a/01_Lazaro_Vega_Task/contact.html
+++ b/01_Lazaro_Vega_Task/contact.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <aside>
-        <img src="./assets/Logo-Mighty-ducks-01.png" width=30 />
+        <img src="./assets/Logo-Mighty-ducks-01.png" alt="logo" width="30" />
       </aside>
       <div>
         <h1>Mighty Ducks Hockey League</h1>
@@ -22,18 +22,18 @@
         </nav>
       </div>
     </header>
-    <section>
+    <div>
       <aside>
         <figure>
-          <img src="./assets/hockey3.jpg" alt="News" width=100 height="100" />
+          <img src="./assets/hockey3.jpg" alt="News" width="100" height="100" />
         </figure>
       </aside>
-      <article>
+      <div>
         <span>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></span>
         <br>
         <span>We reply to your email as soon as we can.</span>
-      </article>
-    </section>
+      </div>
+    </div>
   </body>
 
 </html>
