fix html validator warnings

--- a/02_Lazaro_Vega_Task/about.html
+++ b/02_Lazaro_Vega_Task/about.html
@@ -28,7 +28,7 @@
           <a href="./contact.html">Contact</a>
         </nav>
       </aside>
-      <section class="main-container">
+      <div class="main-container">
         <article>
           <div>
             <h3>Mision</h3>
@@ -50,7 +50,7 @@
               parents and previous league members</span>
           </div>
         </article>
-      </section>
+      </div>
     </main>
   </body>
 
