--- a/02_Lazaro_Vega_Task/contact.html
+++ b/02_Lazaro_Vega_Task/contact.html
@@ -28,16 +28,14 @@
           <a class="active" href="./contact.html">Contact</a>
         </nav>
       </aside>
-      <section class="main-container">
-        <article>
-          <div>
-            <span>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></span>
-          </div>
-          <div>
-            <span>We reply to your email as soon as we can.</span>
-          </div>
-        </article>
-      </section>
+      <div class="main-container">
+        <div>
+          <span>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></span>
+        </div>
+        <div>
+          <span>We reply to your email as soon as we can.</span>
+        </div>
+      </div>
     </main>
   </body>
 
