--- a/02_Lazaro_Vega_Task/index.html
+++ b/02_Lazaro_Vega_Task/index.html
@@ -28,7 +28,7 @@
           <a href="./contact.html">Contact</a>
         </nav>
       </aside>
-      <section class="main-container">
+      <div class="main-container">
         <article>
           <div>
             <h3>August 4 </h3>
@@ -43,7 +43,7 @@
             <span>First Game of the Season (Check Game Schedule for details)</span>
           </div>
         </article>
-      </section>
+      </div>
     </main>
   </body>
 
