flex to all pages, task 3

--- a/03_Lazaro_Vega_Task/about.html
+++ b/03_Lazaro_Vega_Task/about.html
@@ -26,6 +26,8 @@
           <a href="./index.html">Home</a>
           <a class="active" href="./about.html">About MDLH</a>
           <a href="./contact.html">Contact</a>
+          <a href="./rules.html">Rules</a>
+          <a href="./game-information.html">Game Information</a>
         </nav>
       </aside>
       <div class="main-container">
