--- a/03_Lazaro_Vega_Task/contact.html
+++ b/03_Lazaro_Vega_Task/contact.html
@@ -26,9 +26,11 @@
           <a href="./index.html">Home</a>
           <a href="./about.html">About MDLH</a>
           <a class="active" href="./contact.html">Contact</a>
+          <a href="./rules.html">Rules</a>
+          <a href="./game-information.html">Game Information</a>
         </nav>
       </aside>
-      <div class="main-container">
+      <div class="main-container contact" style="flex-direction: column; padding: 2rem;">
         <div>
           <span>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></span>
         </div>
