--- a/03_Lazaro_Vega_Task/game-information.html
+++ b/03_Lazaro_Vega_Task/game-information.html
@@ -26,36 +26,91 @@
           <a href="./index.html">Home</a>
           <a href="./about.html">About MDLH</a>
           <a href="./contact.html">Contact</a>
-          <a class="active" href="./rules.html">Rules</a>
-          <a href="./game-information.html">Game Information</a>
+          <a href="./rules.html">Rules</a>
+          <a class="active" href="./game-information.html">Game Information</a>
         </nav>
       </aside>
       <div class="main-container">
         <article>
-          <section>
+          <section class="table-container">
             <h1>Mighty Ducks Hockey League</h1>
-            <h3>Fall Schedule</h3>
-            <span>*All games take place on Saturday</span>
+            <div>
+              <h3>Fall Schedule</h3>
+              <a href="#">*All games take place on Saturday</a>
+            </div>
             <table>
               <tr>
-                <th>SEPTEMBER</th>
-                <th>Teams</th>
-                <th>Location</th>
-                <th>Times</th>
+                <th colspan="3">SEPTEMBER</th>
+                <th colspan="3">Teams</th>
+                <th colspan="3">Location</th>
+                <th colspan="3">Times</th>
               </tr>
               <tr>
-                <td>9/01</td>
-                <td>U1 and U4</td>
-                <td>AJ Katzenmaier</td>
-                <td>9:30 a.m.</td>
+                <td class="table-date" colspan="3" rowspan="2">9/01</td>
+                <td colspan="3" class="table-teams">U1 and U4</td>
+                <td colspan="3">AJ Katzenmaier</td>
+                <td colspan="3">9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td colspan="3" class="table-teams">U3 and U2</td>
+                <td colspan="3">Greenbay</td>
+                <td colspan="3">1:00 p.m.</td>
+              </tr>
+              <tr>
+                <td class="table-date" rowspan="2">9/08</td>
+                <td colspan="3" class="table-teams">U5 and U6</td>
+                <td colspan="3">Howard A Yeager</td>
+                <td colspan="3">9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td colspan="3" class="table-teams">U6 and U1</td>
+                <td colspan="3">Marjorie P Hart</td>
+                <td colspan="3">1:00 p.m.</td>
+              </tr>
+              <tr>
+                <td class="table-date" rowspan="2">9/15</td>
+                <td colspan="3" class="table-teams">U2 and U4</td>
+                <td colspan="3">North</td>
+                <td colspan="3">9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td colspan="3" class="table-teams">U3 and U5</td>
+                <td colspan="3">Aj Katzenmaier</td>
+                <td colspan="3">1:00 p.m.</td>
+              </tr>
+              <tr>
+                <td class="table-date" rowspan="2">9/22</td>
+                <td colspan="3" class="table-teams">U1 and U3</td>
+                <td colspan="3">South</td>
+                <td colspan="3">9:30 a.m.</td>
+              </tr>
+              <tr>
+                <td colspan="3">U2 and U6</td>
+                <td colspan="3">Howard A Yeager</td>
+                <td colspan="3">1:00 p.m.</td>
+              </tr>
+              <tr>
+                <td class="table-date">9/29</td>
+                <td colspan="3" class="table-teams">U4 and U5</td>
+                <td colspan="3">Greenbay</td>
+                <td colspan="3">9:30 a.m.</td>
               </tr>
             </table>
-            <span><strong>Facility Type:</strong> Outdoor</span>
-            <span><strong>Additional Information:</strong> If deemed necessary by MDHL games may be shortened or
-              cancelled due to extreme weather conditions.</span>
-            <span><strong>Please direct all questions to:</strong> Michael Randall, League Coordinator</span>
-            <span><strong>Phone:</strong> (630) 690-8132</span>
-            <span><strong>Email:</strong>michael.randall@chihockey.org</span>
+            <div>
+              <span><strong>Facility Type:</strong> Outdoor</span>
+            </div>
+            <div>
+              <span><strong>Additional Information:</strong> If deemed necessary by MDHL games may be shortened or
+                cancelled due to extreme weather conditions.</span>
+            </div>
+            <br>
+            <div>
+              <span><strong>Please direct all questions to:</strong> Michael Randall, League Coordinator</span>
+            </div>
+            <div style="display: flex; justify-content: space-between;">
+              <span><strong>Phone:</strong> (630) 690-8132</span>
+              <span><strong>Email:</strong>michael.randall@chihockey.org</span>
+            </div>
           </section>
         </article>
       </div>
