--- a/03_Lazaro_Vega_Task/rules.html
+++ b/03_Lazaro_Vega_Task/rules.html
@@ -16,7 +16,7 @@
         <h1>Mighty Ducks Hockey League</h1>
       </div>
       <div class="header-title">
-        <h2>Upcoming Events</h2>
+        <h2>Rules</h2>
         <img src="./assets/Logo-Mighty-ducks-01.png" alt="logo" />
       </div>
     </header>
@@ -31,26 +31,35 @@
         </nav>
       </aside>
       <div class="main-container">
-        <article>
+        <article class="rules">
           <section>
-            <h2>Mighty Ducks Hockey League</h2>
-            <h2>RULES OF PLAY & POLICIES</h2>
-            <span>IHF rules shall govern MDHL play except as modified herein.</span>
             <div>
-              <h2>SPORTSMANSHIP</h2>
-              <span>The common interest that members of the Association share is to inspire
-                youth to practice the ideals of sportsmanship and fair play. Any player, coach,
-                team, parent, spectator, administrator or referee whose behavior detracts from
-                this purpose is subject to disciplinary action regardless of technical hockey
-                background, expertise, accomplishments or standing.</span>
+              <h2>Mighty Ducks Hockey League</h2>
+              <h2>RULES OF PLAY & POLICIES</h2>
+              <span>IHF rules shall govern MDHL play except as modified herein.</span>
             </div>
+            <h2>SPORTSMANSHIP</h2>
+            <p>&emsp;&emsp;The common interest that members of the Association share is to inspire
+              youth to practice the ideals of sportsmanship and fair play. Any player, coach,
+              team, parent, spectator, administrator or referee whose behavior detracts from
+              this purpose is subject to disciplinary action regardless of technical hockey
+              background, expertise, accomplishments or standing.</p>
             <h2>IHF FIELD REGULATIONS</h2>
             <ol>
-              <li><strong> DIMENSIONS.</strong><span></span></li>
-              <li><strong>COMPETITION FIELDS.</strong><span></span></li>
+              <li><strong> DIMENSIONS.</strong><span>IHF Law 1 provides for flexible external field dimensions within
+                  a given maximum and minimum width and length. These dimensions should be
+                  adhered to for all fields used by teams under 12 and older</span></li>
+              <li><strong>COMPETITION FIELDS.</strong><span>Fields used within the competition program must be
+                  a minimum of 100 x 60 yards.Leagues, districts or associations participating in
+                  the state competition program that are unable to provide a field that meets these
+                  minimum requirements must advise the State Competition Board which will
+                  assign its Fields Committee to inspect the field and recommend to the Board
+                  whether or not a waiver of the minimum dimensions should be granted. Teams
+                  from leagues, districts or associations that are unable to provide an acceptable
+                  field may be required to play all their games away.</span></li>
               <li>
                 <strong>FIELDS USED BY YOUNG AGE GROUPS</strong>
-                <ol>
+                <ol type="a">
                   <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
                     for older age groups should be progressively larger.</li>
                   <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
@@ -61,9 +70,9 @@
               </li>
             </ol>
             <h2>ALL-PLAY</h2>
-            <span>All-play means that every recreation player on every team shall play atleast
+            <p>&emsp;&emsp;All-play means that every recreation player on every team shall play atleast
               fifty percent of each game. Coaches in the competition program are encouraged
-              to play their players 50% of each game.</span>
+              to play their players 50% of each game.</p>
             <ul>
               <li>A Coach shall be permitted to not play a player 50% of each game
                 under special circumstances, e.g., unexcused absences from practice
