pdfs deleted and html validator errors fixed

--- a/04_Lazaro_Vega_Task/game-information.html
+++ b/04_Lazaro_Vega_Task/game-information.html
@@ -41,60 +41,60 @@
             </div>
             <table>
               <tr>
-                <th colspan="3">SEPTEMBER</th>
-                <th colspan="3">Teams</th>
-                <th colspan="3">Location</th>
-                <th colspan="3">Times</th>
+                <th>SEPTEMBER</th>
+                <th>Teams</th>
+                <th>Location</th>
+                <th>Times</th>
               </tr>
               <tr>
-                <td class="table-date" colspan="3" rowspan="2">9/01</td>
-                <td colspan="3" class="table-teams">U1 and U4</td>
-                <td colspan="3"><a href="#AJK">AJ Katzenmaier</a></td>
-                <td colspan="3">9:30 a.m.</td>
+                <td class="table-date" rowspan="2">9/01</td>
+                <td rowspan="1" class="table-teams">U1 and U4</td>
+                <td rowspan="1"><a href="#AJK">AJ Katzenmaier</a></td>
+                <td rowspan="1">9:30 a.m.</td>
               </tr>
               <tr>
-                <td colspan="3" class="table-teams">U3 and U2</td>
-                <td colspan="3"><a href="#GRB">Greenbay</a></td>
-                <td colspan="3">1:00 p.m.</td>
+                <td rowspan="1" class="table-teams">U3 and U2</td>
+                <td rowspan="1"><a href="#GRB">Greenbay</a></td>
+                <td rowspan="1">1:00 p.m.</td>
               </tr>
               <tr>
                 <td class="table-date" rowspan="2">9/08</td>
-                <td colspan="3" class="table-teams">U5 and U6</td>
-                <td colspan="3"><a href="#HAY">Howard A Yeager</a></td>
-                <td colspan="3">9:30 a.m.</td>
+                <td rowspan="1" class="table-teams">U5 and U6</td>
+                <td rowspan="1"><a href="#HAY">Howard A Yeager</a></td>
+                <td rowspan="1">9:30 a.m.</td>
               </tr>
               <tr>
-                <td colspan="3" class="table-teams">U6 and U1</td>
-                <td colspan="3"><a href="#MPH">Marjorie P Hart</a></td>
-                <td colspan="3">1:00 p.m.</td>
+                <td rowspan="1" class="table-teams">U6 and U1</td>
+                <td rowspan="1"><a href="#MPH">Marjorie P Hart</a></td>
+                <td rowspan="1">1:00 p.m.</td>
               </tr>
               <tr>
                 <td class="table-date" rowspan="2">9/15</td>
-                <td colspan="3" class="table-teams">U2 and U4</td>
-                <td colspan="3"><a href="#NTH">North</a></td>
-                <td colspan="3">9:30 a.m.</td>
+                <td rowspan="1" class="table-teams">U2 and U4</td>
+                <td rowspan="1"><a href="#NTH">North</a></td>
+                <td rowspan="1">9:30 a.m.</td>
               </tr>
               <tr>
-                <td colspan="3" class="table-teams">U3 and U5</td>
-                <td colspan="3"><a href="#AJK">AJ Katzenmaier</a></td>
-                <td colspan="3">1:00 p.m.</td>
+                <td class="table-teams">U3 and U5</td>
+                <td rowspan="1"><a href="#AJK">AJ Katzenmaier</a></td>
+                <td rowspan="1">1:00 p.m.</td>
               </tr>
               <tr>
                 <td class="table-date" rowspan="2">9/22</td>
-                <td colspan="3" class="table-teams">U1 and U3</td>
-                <td colspan="3"><a href="#STH">South</a></td>
-                <td colspan="3">9:30 a.m.</td>
+                <td rowspan="1" class="table-teams">U1 and U3</td>
+                <td rowspan="1"><a href="#STH">South</a></td>
+                <td rowspan="1">9:30 a.m.</td>
               </tr>
               <tr>
-                <td colspan="3">U2 and U6</td>
-                <td colspan="3"><a href="#HAY">Howard A Yeager</a></td>
-                <td colspan="3">1:00 p.m.</td>
+                <td rowspan="1">U2 and U6</td>
+                <td rowspan="1"><a href="#HAY">Howard A Yeager</a></td>
+                <td rowspan="1">1:00 p.m.</td>
               </tr>
               <tr>
-                <td class="table-date">9/29</td>
-                <td colspan="3" class="table-teams">U4 and U5</td>
-                <td colspan="3"><a href="#GRB">Greenbay</a></td>
-                <td colspan="3">9:30 a.m.</td>
+                <td class="table-date" rowspan="1">9/29</td>
+                <td rowspan="1" class="table-teams">U4 and U5</td>
+                <td rowspan="1"><a href="#GRB">Greenbay</a></td>
+                <td rowspan="1">9:30 a.m.</td>
               </tr>
             </table>
             <div>
