--- a/JS-01_Lazaro_Vega_Task/upcoming-events.html
+++ b/JS-01_Lazaro_Vega_Task/upcoming-events.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap"
+      rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
@@ -14,7 +18,7 @@
   <body>
     <main class="d-flex flex-column vh-100">
       <header
-        class="container-fluid d-flex flex-column flex-md-row justify-content-between align-items-center px-0 px-sm-2 py-2 border-bottom border-danger">
+        class="container-fluid bg-dark text-white d-flex flex-column flex-md-row justify-content-between align-items-center px-0 px-sm-2 py-1 border-bottom border-danger">
         <img class="ratio ratio-21x9" style="width:15rem;" src="./assets/Logo_Amazing_Events.png"
           alt="Amazing Events Logo">
         <nav class="flex-grow-1">
@@ -37,7 +41,7 @@
           </ul>
         </nav>
       </header>
-      <section class="d-flex justify-content-between align-items-center bg-danger py-4 px-2">
+      <section class="d-flex justify-content-between align-items-center bg-danger py-1 px-2 ">
         <a href="./past-events.html" class="btn btn-danger p-0 px-1"><span class="fs-1">&larr;</span></a>
         <h1 class="text-white">Upcoming Events</h1>
         <a href="./contact.html" class="btn btn-danger p-0 px-1"><span class="fs-1">&rarr;</span></a>
