--- a/JS-01_Lazaro_Vega_Task/stats.html
+++ b/JS-01_Lazaro_Vega_Task/stats.html
@@ -46,7 +46,7 @@
         <h1 class="text-white">Stats</h1>
         <a href="./index.html" class="btn btn-danger p-0 px-1"><span class="fs-1">&rarr;</span></a>
       </section>
-      <section class="d-flex flex-column p-4 flex-grow-1">
+      <div class="d-flex flex-column p-4 flex-grow-1">
         <table class="table table-bordered m-0">
           <thead class="table-danger">
             <tr>
@@ -114,7 +114,7 @@
             </tr>
           </tbody>
         </table>
-      </section>
+      </div>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
         <nav class="d-flex gap-2">
           <a href="#" style="width: 3rem; height: 3rem;"
