--- a/JS-01_Lazaro_Vega_Task/event-details.html
+++ b/JS-01_Lazaro_Vega_Task/event-details.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/Logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap"
@@ -22,7 +23,7 @@
         <img class="ratio ratio-21x9" style="width:15rem;" src="./assets/Logo_Amazing_Events.png"
           alt="Amazing Events Logo">
         <nav class="flex-grow-1">
-          <ul class="list-group list-group-horizontal justify-content-evenly flex-column flex-sm-row gap-1">
+          <ul class="list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1">
             <li class="btn btn-danger">
               <a class="nav-link" href="./index.html">Home</a>
             </li>
