--- a/JS-01_Lazaro_Vega_Task/upcoming-events.html
+++ b/JS-01_Lazaro_Vega_Task/upcoming-events.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./assets/Logo.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,700&display=swap"
@@ -22,7 +23,7 @@
         <img class="ratio ratio-21x9" style="width:15rem;" src="./assets/Logo_Amazing_Events.png"
           alt="Amazing Events Logo">
         <nav class="flex-grow-1">
-          <ul class="list-group list-group-horizontal justify-content-evenly flex-column flex-sm-row gap-1">
+          <ul class="list-group list-group-horizontal justify-content-evenly flex-row flex-wrap gap-1">
             <li class="btn btn-danger">
               <a class="nav-link" href="./index.html">Home</a>
             </li>
@@ -42,9 +43,9 @@
         </nav>
       </header>
       <section class="d-flex justify-content-between align-items-center bg-danger py-1 px-2 ">
-        <a href="./past-events.html" class="btn btn-danger p-0 px-1"><span class="fs-1">&larr;</span></a>
+        <a href="./index.html" class="btn btn-danger p-0 px-1"><span class="fs-1">&larr;</span></a>
         <h1 class="text-white">Upcoming Events</h1>
-        <a href="./contact.html" class="btn btn-danger p-0 px-1"><span class="fs-1">&rarr;</span></a>
+        <a href="./past-events.html" class="btn btn-danger p-0 px-1"><span class="fs-1">&rarr;</span></a>
       </section>
       <section class="d-flex flex-column py-4 flex-grow-1">
         <form class="d-flex flex-wrap px-3">
@@ -76,11 +77,11 @@
         </form>
         <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0">
           <div class="col">
-            <div class="card p-3">
+            <div class="card bg-dark text-white p-3">
               <img src="./assets/Costume_Party.jpg" class="card-img-top rounded" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <h6 class="card-subtitle mb-2 text-white">Card subtitle</h6>
               </div>
               <div class="d-flex justify-content-between align-items-center p-2">
                 <span>Price $0000</span>
@@ -89,11 +90,11 @@
             </div>
           </div>
           <div class="col">
-            <div class="card p-3">
+            <div class="card bg-dark text-white p-3">
               <img src="./assets/Food_Fair.jpg" class="card-img-top rounded" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <h6 class="card-subtitle mb-2 text-white">Card subtitle</h6>
               </div>
               <div class="d-flex justify-content-between align-items-center p-2">
                 <span>Price $0000</span>
@@ -102,11 +103,11 @@
             </div>
           </div>
           <div class="col">
-            <div class="card p-3">
+            <div class="card bg-dark text-white p-3">
               <img src="./assets/Museum_Tour.jpg" class="card-img-top rounded" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <h6 class="card-subtitle mb-2 text-white">Card subtitle</h6>
               </div>
               <div class="d-flex justify-content-between align-items-center p-2">
                 <span>Price $0000</span>
@@ -115,11 +116,11 @@
             </div>
           </div>
           <div class="col">
-            <div class="card p-3">
+            <div class="card bg-dark text-white p-3">
               <img src="./assets/Music_Concert.jpg" class="card-img-top rounded" alt="...">
               <div class="card-body text-center">
                 <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
+                <h6 class="card-subtitle mb-2 text-white">Card subtitle</h6>
               </div>
               <div class="d-flex justify-content-between align-items-center p-2">
                 <span>Price $0000</span>
