dynamic data in html

--- a/JS-01_Lazaro_Vega_Task/index.html
+++ b/JS-01_Lazaro_Vega_Task/index.html
@@ -75,213 +75,7 @@
             <button class="btn btn-outline-danger" type="button" id="inputGroup1">Search</button>
           </div>
         </form>
-        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0">
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/Fs03hQDt/Collectivities-Party.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Collectivities Party</h5>
-                <h6 class="card-subtitle mb-2 text-white">Enjoy your favourite dishes, from different countries, in a
-                  unique event for the whole family.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $5</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/ZmD3Xf57/Korean-style.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Korean style</h5>
-                <h6 class="card-subtitle mb-2 text-white">Enjoy the best Korean dishes, with international chefs and
-                  awesome events.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $10</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/GmHRkbNV/Jurassic-Park.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Jurassic Park</h5>
-                <h6 class="card-subtitle mb-2 text-white">Let's go meet the biggest dinosaurs in the paleontology
-                  museum.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $15</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/c4C2zXm8/Parisian-Museum.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Parisian Museum</h5>
-                <h6 class="card-subtitle mb-2 text-white">A unique tour in the city of lights, get to know one of the
-                  most iconic places.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $3500</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/KYD0jMf2/comicon.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Comicon</h5>
-                <h6 class="card-subtitle mb-2 text-white">For comic lovers, all your favourite characters gathered in
-                  one place.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $54</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/RZ9fH4Pr/halloween.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Halloween Night</h5>
-                <h6 class="card-subtitle mb-2 text-white">Come with your scariest costume and win incredible prizes.
-                </h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $12</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/PrMJ0ZMc/Metallica-in-concert.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Metallica in concert</h5>
-                <h6 class="card-subtitle mb-2 text-white">The only concert of the most emblematic band in the world.
-                </h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $150</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/KvsSK8cj/Electronic-Fest.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Electronic Fest</h5>
-                <h6 class="card-subtitle mb-2 text-white">The best national and international DJs gathered in one place.
-                </h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $250</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/fyLqZY9K/10-K-for-life.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">10K for life</h5>
-                <h6 class="card-subtitle mb-2 text-white">Come and exercise, improve your health and lifestyle.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $3</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/zv67r65z/15kny.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">15K NY</h5>
-                <h6 class="card-subtitle mb-2 text-white">We'll be raising funds for hospitals and medical care in this
-                  unique event held in The Big Apple.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $3</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/Sst763n6/book1.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">School's book fair</h5>
-                <h6 class="card-subtitle mb-2 text-white">Bring your unused school book and take the one you need.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $1</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/05FhxHVK/book4.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Just for your kitchen</h5>
-                <h6 class="card-subtitle mb-2 text-white">If you're a gastronomy lover come get the cookbook that best
-                  suits your taste and your family's.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $100</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/vH52y81C/cinema4.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Batman</h5>
-                <h6 class="card-subtitle mb-2 text-white">Come see Batman fight crime in Gotham City.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $225</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/T3C92KTN/scale.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Avengers</h5>
-                <h6 class="card-subtitle mb-2 text-white">Marvel's Avengers Premier in 3d, the start of an epic saga
-                  with your favourite superheroes.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $250</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
+        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0" id="card-container">
         </div>
       </section>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
