--- a/JS-01_Lazaro_Vega_Task/upcoming-events.html
+++ b/JS-01_Lazaro_Vega_Task/upcoming-events.html
@@ -75,110 +75,7 @@
             <button class="btn btn-outline-danger" type="button" id="inputGroup1">Search</button>
           </div>
         </form>
-        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0">
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/ZmD3Xf57/Korean-style.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Korean style</h5>
-                <h6 class="card-subtitle mb-2 text-white">Enjoy the best Korean dishes, with international chefs and
-                  awesome events.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $10</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/c4C2zXm8/Parisian-Museum.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Parisian Museum</h5>
-                <h6 class="card-subtitle mb-2 text-white">A unique tour in the city of lights, get to know one of the
-                  most iconic places.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $3500</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/RZ9fH4Pr/halloween.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Halloween Night</h5>
-                <h6 class="card-subtitle mb-2 text-white">Come with your scariest costume and win incredible prizes.
-                </h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $12</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/PrMJ0ZMc/Metallica-in-concert.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Metallica in concert</h5>
-                <h6 class="card-subtitle mb-2 text-white">The only concert of the most emblematic band in the world.
-                </h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $150</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/zv67r65z/15kny.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">15K NY</h5>
-                <h6 class="card-subtitle mb-2 text-white">We'll be raising funds for hospitals and medical care in this
-                  unique event held in The Big Apple.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $3</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/Sst763n6/book1.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">School's book fair</h5>
-                <h6 class="card-subtitle mb-2 text-white">Bring your unused school book and take the one you need.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $1</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col">
-            <div class="card bg-dark text-white p-3">
-              <img src=https://i.postimg.cc/T3C92KTN/scale.jpg class="card-img-top rounded" alt="...">
-              <div class="card-body text-center p-0 py-3">
-                <h5 class="card-title">Avengers</h5>
-                <h6 class="card-subtitle mb-2 text-white">Marvel's Avengers Premier in 3d, the start of an epic saga
-                  with your favourite superheroes.</h6>
-              </div>
-              <div class="d-flex justify-content-between align-items-center p-2">
-                <span>Price $250</span>
-                <a href="./event-details.html" class="btn btn-danger">View More...</a>
-              </div>
-            </div>
-          </div>
+        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0" id="card-container">
         </div>
       </section>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
