--- a/JS-01_Lazaro_Vega_Task/contact.html
+++ b/JS-01_Lazaro_Vega_Task/contact.html
@@ -50,19 +50,19 @@
       <div class="d-flex flex-column py-4 flex-grow-1">
         <form class="d-flex flex-column align-items-center container-sm gap-1">
           <div class="form-floating mb-3 w-100">
-            <input type="email" class="form-control" id="name" placeholder="Name">
+            <input type="text" class="form-control" id="name" placeholder="Name" required>
             <label for="name">Name</label>
           </div>
           <div class="form-floating mb-3 w-100">
-            <input type="email" class="form-control" id="email" placeholder="Email">
+            <input type="email" class="form-control" id="email" placeholder="Email" required>
             <label for="email">Email address</label>
           </div>
           <div class=" form-floating w-100">
-            <textarea class="form-control h-75" id="message" name="message" placeholder="Leave a message here"
+            <textarea class="form-control h-75" id="message" name="message" placeholder="Leave a message here" required
               rows="8"></textarea>
             <label for="message">Message</label>
           </div>
-          <button class="btn btn-lg btn-danger align-self-end">Submit</button>
+          <button type="submit" class="btn btn-lg btn-danger align-self-end">Submit</button>
         </form>
       </div>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
@@ -84,10 +84,10 @@
       </footer>
     </main>
 
-    <script src="./main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"></script>
+    <script src="./contact.js"></script>
   </body>
 
 </html>
