title in all pages + dynamic in details, "loading" indicator,

--- a/JS-01_Lazaro_Vega_Task/stats.html
+++ b/JS-01_Lazaro_Vega_Task/stats.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>Amazing Events</title>
+    <title>Stats | Amazing Events</title>
   </head>
 
   <body>
@@ -63,9 +63,9 @@
               <td class="w-25">Event with larger capacity</td>
             </tr>
             <tr>
-              <th id="highestPercentage">Cargando...</th>
-              <td id="lowestPercentage">Cargando...</td>
-              <td id="largerCapacity">Cargando...</td>
+              <th id="highestPercentage">Loading...</th>
+              <td id="lowestPercentage">Loading...</td>
+              <td id="largerCapacity">Loading...</td>
             </tr>
           </tbody>
         </table>
@@ -83,9 +83,9 @@
               <td class="w-25">Percentage of attendance</td>
             </tr>
             <tr>
-              <th>Cargando...</th>
-              <td>Cargando...</td>
-              <td>Cargando...</td>
+              <th>Loading...</th>
+              <td>Loading...</td>
+              <td>Loading...</td>
             </tr>
           </tbody>
         </table>
@@ -103,9 +103,9 @@
               <td class="w-25">Percentage of attendance</td>
             </tr>
             <tr>
-              <th>Cargando...</th>
-              <td>Cargando...</td>
-              <td>Cargando...</td>
+              <th>Loading...</th>
+              <td>Loading...</td>
+              <td>Loading...</td>
             </tr>
           </tbody>
         </table>
