--- a/JS-01_Lazaro_Vega_Task/index.html
+++ b/JS-01_Lazaro_Vega_Task/index.html
@@ -13,7 +13,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
-    <title>Amazing Events</title>
+    <title>Home | Amazing Events</title>
   </head>
 
   <body>
@@ -61,8 +61,9 @@
           </form>
         </div>
         <!-- CARDS -->
-        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0" id="card-container">
-          <h2>Cargando...</h2>
+        <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0 justify-content-center text-center"
+          id="card-container">
+          <h2>Loading...</h2>
         </div>
       </section>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
