search working with checkbox filters, details new style and footer links

--- a/JS-01_Lazaro_Vega_Task/stats.html
+++ b/JS-01_Lazaro_Vega_Task/stats.html
@@ -112,15 +112,15 @@
       </div>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
         <nav class="d-flex gap-2">
-          <a href="#" style="width: 3rem; height: 3rem;"
+          <a href="http://instagram.com" target="_blank" rel="noopener noreferrer" style="width: 3rem; height: 3rem;"
             class="d-flex bg-dark rounded-circle justify-content-center align-items-center">
             <img style="width: 2rem;" src="./assets/instagram.png" alt="instagram">
           </a>
-          <a href="#" style="width: 3rem; height: 3rem;"
+          <a href="http://facebook.com" target="_blank" rel="noopener noreferrer" style="width: 3rem; height: 3rem;"
             class="d-flex bg-dark rounded-circle justify-content-center align-items-center">
             <img style="width: 2rem;" src="./assets/facebook.png" alt="facebook">
           </a>
-          <a href="#" style="width: 3rem; height: 3rem;"
+          <a href="http://whatsapp.com" target="_blank" rel="noopener noreferrer" style="width: 3rem; height: 3rem;"
             class="d-flex bg-dark rounded-circle justify-content-center align-items-center">
             <img style="width: 2rem;" src="./assets/whatsapp.png" alt="whatsapp">
           </a>
