--- a/JS-01_Lazaro_Vega_Task/index.html
+++ b/JS-01_Lazaro_Vega_Task/index.html
@@ -55,7 +55,7 @@
           <div class="d-flex flex-wrap align-items-center gap-2 me-2" id="checkbox-container">
           </div>
           <form class="input-group d-flex flex-grow-1 w-25" id="search-form">
-            <input type="text" class="form-control" id="inputGroupFile1" aria-describedby="search-button"
+            <input type="text" class="form-control" id="search-input" aria-describedby="search-button"
               aria-label="Search">
             <button class="btn btn-outline-danger" type="submit">Search</button>
           </form>
@@ -68,15 +68,15 @@
       </section>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
         <nav class="d-flex gap-2">
-          <a href="#" style="width: 3rem; height: 3rem;"
+          <a href="http://instagram.com" target="_blank" rel="noopener noreferrer" style="width: 3rem; height: 3rem;"
             class="d-flex bg-dark rounded-circle justify-content-center align-items-center">
             <img style="width: 2rem;" src="./assets/instagram.png" alt="instagram">
           </a>
-          <a href="#" style="width: 3rem; height: 3rem;"
+          <a href="http://facebook.com" target="_blank" rel="noopener noreferrer" style="width: 3rem; height: 3rem;"
             class="d-flex bg-dark rounded-circle justify-content-center align-items-center">
             <img style="width: 2rem;" src="./assets/facebook.png" alt="facebook">
           </a>
-          <a href="#" style="width: 3rem; height: 3rem;"
+          <a href="http://whatsapp.com" target="_blank" rel="noopener noreferrer" style="width: 3rem; height: 3rem;"
             class="d-flex bg-dark rounded-circle justify-content-center align-items-center">
             <img style="width: 2rem;" src="./assets/whatsapp.png" alt="whatsapp">
           </a>
