search by input event and spinner added

--- a/JS-01_Lazaro_Vega_Task/event-details.html
+++ b/JS-01_Lazaro_Vega_Task/event-details.html
@@ -46,7 +46,9 @@
       </header>
       <!-- CARD DETAILS -->
       <section id="details" class="d-flex flex-column align-items-center justify-content-center flex-grow-1">
-        <h2>Cargando...</h2>
+        <div class="spinner-border text-danger" role="status">
+          <span class="visually-hidden">Loading...</span>
+        </div>
       </section>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
         <nav class="d-flex gap-2">
