--- a/JS-01_Lazaro_Vega_Task/stats.html
+++ b/JS-01_Lazaro_Vega_Task/stats.html
@@ -63,9 +63,21 @@
               <td class="w-25">Event with larger capacity</td>
             </tr>
             <tr>
-              <th id="highestPercentage">Loading...</th>
-              <td id="lowestPercentage">Loading...</td>
-              <td id="largerCapacity">Loading...</td>
+              <th id="highestPercentage">
+                <div class="spinner-border text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </th>
+              <td id="lowestPercentage">
+                <div class="spinner-border text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </td>
+              <td id="largerCapacity">
+                <div class="spinner-border text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </td>
             </tr>
           </tbody>
         </table>
@@ -83,9 +95,21 @@
               <td class="w-25">Percentage of attendance</td>
             </tr>
             <tr>
-              <th>Loading...</th>
-              <td>Loading...</td>
-              <td>Loading...</td>
+              <th>
+                <div class="spinner-border text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </th>
+              <td>
+                <div class="spinner-border text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </td>
+              <td>
+                <div class="spinner-border text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </td>
             </tr>
           </tbody>
         </table>
@@ -103,9 +127,21 @@
               <td class="w-25">Percentage of attendance</td>
             </tr>
             <tr>
-              <th>Loading...</th>
-              <td>Loading...</td>
-              <td>Loading...</td>
+              <th>
+                <div class="spinner-border text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </th>
+              <td>
+                <div class="spinner-border text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </td>
+              <td>
+                <div class="spinner-border text-danger" role="status">
+                  <span class="visually-hidden">Loading...</span>
+                </div>
+              </td>
             </tr>
           </tbody>
         </table>
