--- a/JS-01_Lazaro_Vega_Task/index.html
+++ b/JS-01_Lazaro_Vega_Task/index.html
@@ -63,7 +63,9 @@
         <!-- CARDS -->
         <div class="row row-cols-1 row-cols-lg-4 row-cols-md-2 g-4 m-0 justify-content-center text-center"
           id="card-container">
-          <h2>Loading...</h2>
+          <div class="spinner-border text-danger" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
         </div>
       </section>
       <footer class="d-flex justify-content-between align-items-center bg-danger p-3">
